con noticia y color en el menu sin agregar as correcciones de eduardo

--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -8,19 +8,13 @@
       <!-- Page content start -->
       <main class="margin mt-0">
 
-          <div class="dash-balance">
-            <div class="dash-content relative">
-              <h3 class="w-text">Contáctanos</h3>
-           
-            </div>
-          </div>
-
+        
           <section class="bal-section container">
               <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
            
          
           </section>
-       
+          <div class="form-divider"></div>
         
      
           <div class="form-divider"></div>
@@ -74,11 +68,11 @@
                             <input type="email" id="email" name="aaa" class="form-element" required placeholder="Email *" value="">
                         </div>
                         <div class="form-row no-padding">
-                                <i class="fa fa-align-justify"></i>
+                                <i class="fa fa-building"></i>
                                 <input type="text" id="empresa" name="aaa" class="form-element" required placeholder="Empresa *" value="">
                         </div>
                         
-                    </div><br>
+                    </div><br><div class="form-divider"></div>
                     <div class="form-row">
                             <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="mensajeContacto()" class="button circle block">Enviar</a>
                     </div>
