--- a/src/app/directo/directo.page.html
+++ b/src/app/directo/directo.page.html
@@ -8,13 +8,13 @@
         <!-- Page content start -->
         <main class="margin mt-0">
   
-            <div class="dash-balance">
+            <!-- <div class="dash-balance">
               <div class="dash-content relative">
                 <h3 class="w-text">Directo</h3>
              
               </div>
             </div>
-  
+   -->
             <section class="bal-section container">
                 <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div><br>
              
@@ -23,7 +23,7 @@
          
           
             <section class="bal-section container">
-                <div style="margin:auto" align="center"> <img src="assets/img/headphones.png" alt=""></div><br>
+                <div style="margin:auto" align="center"> <img src="assets/img/phone.jpg" alt=""></div><br>
              
            
             </section>
