--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,41 +5,41 @@
 	  <div class="nav-container">
 		<ul class="main-menu">
 		 	<li >
-				<a href="javascript:void(0);" routerLink="/calcular-proteccion" ><i style="font-size:20px" class="fa fa-calculator" ></i><strong class="special">Calcular Proteccion</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/calcular-proteccion" ><i style="font-size:20px" class="font-redlgc fa fa-calculator" ></i><strong style="font-size:18px" class="special">Calcular Proteccion</strong> </a>
 		  </li>
 			<li >
-				<a href="javascript:void(0);" routerLink="/directo"><i style="font-size:20px" class="fa fa-headphones" ></i><strong class="special">LGC - Directo</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/directo"><i style="font-size:20px" class="font-redlgc fa fa-headphones" ></i><strong style="font-size:18px" class="special">LGC - Directo</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" [(routerLink)]="ruta"><i style="font-size:20px" class="fa fa-shield" ></i><strong class="special">Mis Contratos</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" [(routerLink)]="ruta"><i style="font-size:20px" class="font-redlgc fa fa-shield" ></i><strong style="font-size:18px" class="special">Mis Contratos</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" routerLink="/proteccion-total"><i style="font-size:20px" class="fa fa-expeditedssl" ></i><strong class="special">Protección Total</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/proteccion-total"><i style="font-size:20px" class="font-redlgc fa fa-expeditedssl" ></i><strong style="font-size:18px" class="special">Protección Total</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" routerLink="/proteccion-basica"><i style="font-size:20px" class="fa fa-file-text-o" ></i><strong class="special">Protección Básica</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/proteccion-basica"><i style="font-size:20px" class="font-redlgc fa fa-file-text-o" ></i><strong style="font-size:18px" class="special">Protección Básica</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" [(routerLink)]="ruta2"><i style="font-size:20px" class="fa fa-edit" ></i><strong class="special">Solicitar Contrato</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" [(routerLink)]="ruta2"><i style="font-size:20px" class="font-redlgc fa fa-edit" ></i><strong style="font-size:18px" class="special">Solicitar Contrato</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" routerLink="/credito-hipotecario"><i style="font-size:20px" class="fa fa-home" ></i><strong class="special">Crédito Hipotecario</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/credito-hipotecario"><i style="font-size:20px" class="font-redlgc fa fa-home" ></i><strong style="font-size:18px" class="special">Crédito Hipotecario</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" routerLink="/calcular-credito"><i style="font-size:20px" class="fa fa-money" ></i><strong class="special">Calcular Crédito</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/calcular-credito"><i style="font-size:20px" class="font-redlgc fa fa-money" ></i><strong style="font-size:18px" class="special">Calcular Crédito</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" routerLink="/calcular-irs"><i style="font-size:20px" class="fa fa-table" ></i><strong class="special">Calcular ISR</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/calcular-irs"><i style="font-size:20px" class="font-redlgc fa fa-table" ></i><strong style="font-size:18px" class="special">Calcular ISR</strong> </a>
 			</li>
 
 			<li >
-				<a href="javascript:void(0);" routerLink="/servicios"><i style="font-size:20px" class="fa fa-gears" ></i><strong class="special">Servicios</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/servicios"><i style="font-size:20px" class="font-redlgc fa fa-gears" ></i><strong style="font-size:18px" class="special">Servicios</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" routerLink="/sugerencias"><i style="font-size:20px" class="fa fa-inbox" ></i><strong class="special">Buzón de Sugerencias</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/sugerencias"><i style="font-size:20px" class="font-redlgc fa fa-inbox" ></i><strong style="font-size:18px" class="special">Buzón de Sugerencias</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" routerLink="/contacto"><i style="font-size:20px" class="fa fa-whatsapp" ></i><strong class="special">Contacto</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/contacto"><i style="font-size:20px" class="font-redlgc fa fa-whatsapp" ></i><strong style="font-size:18px" class="special">Contacto</strong> </a>
 			</li>
 		
 		 	<!--
