--- a/src/app/quickmenu/quickmenu.component.html
+++ b/src/app/quickmenu/quickmenu.component.html
@@ -1,10 +1,13 @@
-<header> <!-- extra class no-background -->
+<header class="menuGradient"> <!-- extra class no-background -->
   <a class="go-back-link" href="javascript:history.back();"><i class="fa fa-arrow-left"></i></a>
   
-  <h1 class="page-title">{{title}}</h1>
+  <h1 class="page-title" style="font-weight: 1500">{{title}}</h1>
   <div class="navi-menu-button" (click)="onClk($event)">
-    <em></em>
-    <em></em>
-    <em></em>
+    <em style="background:white"></em>
+    <em style="background:white"></em>
+    <em style="background:white"></em>
   </div>
 </header>
+<div class="form-divider"></div>
+<div class="form-divider"></div>
+<div class="form-divider"></div>
