--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -1,38 +1,27 @@
-<section class="container">
+<section class="container" *ngIf="mostrar">
     <div class="search-result-container">
 						
         <div class="form-divider"></div>
         <h4 class="font-bold font-redlgc text-center">Noticias del Mundo Inmobiliario</h4>
         <div class="form-divider"></div>
 
-        <div class="news-list-item">
-          <div class="list-image">
-            <img src="assets/img/news-list-image-1.jpg" alt="" width="100" height="100">
+        <div *ngFor="let noticia of noticias">
+          <div class="news-list-item" routerLink="{{noticia.url}}" >
+            <div class="list-image">
+              <img  src="{{noticia.image}}" alt="" width="100" height="100">
+            </div>
+            <div class="list-content">
+              <span class="list-category green">{{noticia.etiqueta}}</span>
+              <h2 class="list-title"><a href="javascript:void(0)" routerLink="{{noticia.url}}">{{noticia.titulo}}</a></h2>
+              <a href="javascript:void(0)" class="list-author">{{noticia.autor}}</a> - <span class="list-time">{{noticia.fecha}}</span>
+            </div>
           </div>
-          <div class="list-content">
-            <span class="list-category green">Inmobiliaria</span>
-            <h2 class="list-title"><a href="#">Agrega a los agentes de tu inmobiliaria</a></h2>
-            <a href="#" class="list-author">LGC Admin</a> - <span class="list-time">hace 3 horas</span>
-          </div>
+          <div class="form-mini-divider" ></div>
         </div>
 
-        <div class="form-mini-divider"></div>
+      
 
-        <div class="news-list-item">
-          <div class="list-image">
-            <img src="assets/img/news-list-image-2.jpg" alt="" width="100" height="100">
-          </div>
-          <div class="list-content">
-            <span class="list-category blue">Legal</span>
-            <h2 class="list-title"><a href="#">Nueva reforma beneficia a los arrendatarios</a></h2>
-            <a href="#" class="list-author">LGC Admin</a> - <span class="list-time">hace 3 horas</span>
-          </div>
-        </div>
-
-       
-        <div class="form-divider"></div>
-
-      </div>
+    </div>
 
   <!--<h4 class="font-bold text-center">Noticias del Mundo Inmobiliario</h4>
   <ul class="transaction-list list-unstyled">
