--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -4,7 +4,7 @@
       
       <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
 					<app-menu></app-menu>
-					<app-notifications ubic='login'></app-notifications>
+					<app-notifications ubic='login' bell={{bellHide}}></app-notifications>
         <!-- Page content start -->
         <main class="margin mt-0">
   
@@ -14,7 +14,7 @@
                
               </div>
             </div>
-  
+            <div class="form-divider"></div>
             <section class="bal-section container">
 								<div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div><br>
              
@@ -38,25 +38,18 @@
 								</div>
 			
 						
-								<div class="form-divider"></div>
+              
+             
+                <div class="form-divider"></div>
+                <div class="form-divider"></div>
+                <div class="form-row"  style="text-align: center">
+            
+                    <a style="text-align: center" href="Javascript:void(0);" (click)="login()" class="button circle inline green">Iniciar Sesion</a>
+                </div>
 			
             
             </section><br>
-            <section class="container">
-                <div class="content"> 
-                  <!-- <h4 class="title-main">Balance Split</h4> -->
-                <div class="c-panel">
-                  
-										<div class="form-row"  style="text-align: center">
-            
-												<a style="text-align: center" href="Javascript:void(0);" (click)="login()" class="button circle inline green">Iniciar Sesion</a> | 
-												<a style="text-align: center" href="Javascript:void(0);" routerLink="/home" class="button circle inline red">Ir al Home</a> 
-										</div>
-					
-                </div>
-              </div>
-            </section>
-  
+         
        
   
             <app-footer></app-footer>
