--- a/src/app/sugerencias/sugerencias.page.html
+++ b/src/app/sugerencias/sugerencias.page.html
@@ -8,20 +8,14 @@
       <!-- Page content start -->
       <main class="margin mt-0">
 
-          <div class="dash-balance">
-            <div class="dash-content relative">
-              <h3 class="w-text">Buzón de Sugerencias</h3>
-           
-            </div>
-          </div>
-
+          
           <section class="bal-section container">
               <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
            
          
           </section>
        
-        
+          <div class="form-divider"></div>
      
           <section class="container">
                 <h4 class="title-main">Enviar un correo electronico. Todos los campos con * son obligatorios</h4>
@@ -39,20 +33,20 @@
                         <input type="email" id="email" name="aaa" class="form-element" required placeholder="Email *" value="">
                     </div>
                     <div class="form-row no-padding">
-                            <i class="fa fa-align-justify"></i>
+                            <i class="fa fa-comment"></i>
                             <textarea  name="aaa" class="form-element" required id="sugerencia" cols="50" rows="10" placeholder="Sugerencia *"></textarea>
                           
                     </div>
                  
                 </div>
                 <div class="form-divider"></div>
-
+                <div class="form-divider"></div>
                 <div class="form-row">
                     <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="enviarSugerencia()" class="button circle block">Enviar Sugerencia</a>
                 </div>
 
           </section>      
-
+          <div class="form-divider"></div>
           <app-footer></app-footer>
       </main>
       <!-- Page content end -->
