antes de modificar datatableç

--- a/src/app/members/settings/settings.page.html
+++ b/src/app/members/settings/settings.page.html
@@ -30,7 +30,7 @@
                   
                     <div class="form-row"  style="text-align: center">
             
-                        <a style="text-align: center" href="Javascript:void(0);" routerLink="/home" class="button circle inline red">Ir al Home</a> 
+                        <a style="text-align: center" href="javascript:void(0)" (click)="verIdOneSignal();"  class="button circle inline red">Id One Signal</a> 
                     </div>
           
                 </div>
