--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -36,7 +36,7 @@
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/servicios"><i style="font-size:20px" class="font-redlgc fa fa-gears" ></i><strong style="font-size:18px" class="special">Servicios</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" class="font-redlgc" routerLink="/sugerencias"><i style="font-size:20px" class="font-redlgc fa fa-inbox" ></i><strong style="font-size:18px" class="special">Buzón de Sugerencias</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/sugerencias"><i style="font-size:20px" class="font-redlgc fa fa-inbox" ></i><strong style="font-size:18px" class="special">Sugerencias</strong> </a>
 			</li>
 			<li >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/contacto"><i style="font-size:20px" class="font-redlgc fa fa-whatsapp" ></i><strong style="font-size:18px" class="special">Contacto</strong> </a>
