--- a/src/app/members/dashboardinmobiliaria/dashboardinmobiliaria.page.html
+++ b/src/app/members/dashboardinmobiliaria/dashboardinmobiliaria.page.html
@@ -15,39 +15,50 @@
             </div>
           </div>
 
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-           
-         
-          </section><br>
-          <section class="bal-section container">
-            <div class="form-divider"></div>
-            <div class="form-label-divider "><span class="font-24">Contratos como Inmobiliaria</span></div>
-            <div class="form-divider"></div>
-            
-           
-        
-          </section><br>
+  
           <section class="bal-section container">
 					
             <div class="resources-card-wrapper">
-                <div class="wallet-card mr-10 round">
+                <div class="wallet-card mr-10 yellow-back">
                     <div class="flex-column flex-md-row">
                     
                       <h1 class="w-text">4</h1>
-                      <p class="g-text mb-0 font-weight-medium"> Pendientes </p>
+                      <p class="g-text mb-0 font-weight-medium"> Renovaciones </p>
                     </div>
+                    <div class="form-divider"></div>
+                </div>
+      
+                <div class="wallet-card ml-10 green-back">
+                    <div class="flex-column flex-md-row">
+                   
+                      <h1 class="w-text">2</h1>
+                      <p class="g-text mb-0 font-weight-medium"> Activas</p>
+                    </div>
+                    <div class="form-divider"></div>
+                </div>
+            
+            </div>
+            <br>
+            <div class="resources-card-wrapper">
+                <div class="wallet-card mr-10 blue-back">
+                    <div class="flex-column flex-md-row">
+                    
+                      <h1 class="w-text">4</h1>
+                      <p class="g-text mb-0 font-weight-medium"> Proximas Firmas </p>
+                    </div>
+                    <div class="form-divider"></div>
                 </div>
       
                 <div class="wallet-card ml-10 lgcGradiente">
                     <div class="flex-column flex-md-row">
                    
                       <h1 class="w-text">2</h1>
-                      <p class="g-text mb-0 font-weight-medium"> Aprobados</p>
+                      <p class="g-text mb-0 font-weight-medium"> Reclamos</p>
                     </div>
+                    <div class="form-divider"></div>
                 </div>
+            
             </div>
-          
           </section><br><br>
           <section class="container text-right"  >
            
